Created Data/CarWebSiteContext, Created the database, made InitialCreate Migration to database

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=carwebsite_database;User Id=sa;Password=Zeff2356;TrustServerCertificate=True;"
+  }
 }
