شجلبنا المشروع وبوظنا الفرونت

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=carwebsite_database;User Id=sa;Password=Zeff2356;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=WORK\\MSSQLSERVER02;Database=CarWebSiteDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
