Added CarController, Car/Details,Favorites,index,MyListings,Offer.cshtml

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WORK\\MSSQLSERVER02;Database=CarWebSiteDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=carwebsite;User Id=sa;Password=Zeff2356;TrustServerCertificate=True;"
   }
 }
