FrontEnd Details Enhancement

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,5 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WORK\\MSSQLSERVER02;Database=CarWebSiteDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  }
+      "DefaultConnection": "Server=MOMEN\\MSSQLSERVER01;Database=CarWebSiteDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"  }
 }
